--- a/app/src/main/res/layout/rv_resume_search_item.xml
+++ b/app/src/main/res/layout/rv_resume_search_item.xml
@@ -113,7 +113,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="应聘职位:"
+                android:text="期望职位"
                 android:textColor="#FF666666"
                 android:textSize="13sp" />
 
