--- a/app/src/main/res/layout/activity_resume_details.xml
+++ b/app/src/main/res/layout/activity_resume_details.xml
@@ -325,13 +325,23 @@
                     android:textSize="12sp" />
 
                 <TextView
+                    android:layout_marginBottom="5dp"
                     android:id="@+id/specialty04"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="其他能力：无"
+                    android:textColor="#FF666666"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/selfevaluation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="12dp"
                     android:text="其他能力：无"
                     android:textColor="#FF666666"
                     android:textSize="12sp" />
+
             </LinearLayout>
 
             <LinearLayout
