--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -83,6 +83,7 @@
                         android:textSize="18sp" />
 
                     <ImageView
+                        android:id="@+id/iv11111111"
                         android:layout_gravity="center"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
@@ -378,7 +379,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="124dp"
         android:background="#FAE5E8"
         android:orientation="horizontal">
 
@@ -433,7 +434,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="13dp"
-                android:text="一键刷新"
+                android:text="刷新职位"
                 android:textColor="#FF333333"
                 android:textSize="14sp" />
 
@@ -477,9 +478,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="124dp"
         android:background="#FAE5E8"
         android:orientation="horizontal">
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="0"
+            android:layout_height="match_parent"/>
         <LinearLayout
             android:layout_marginRight="1dp"
             android:id="@+id/menu_3"
@@ -565,9 +570,15 @@
                 android:textSize="14sp" />
 
         </LinearLayout>
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"/>
+
 
         <LinearLayout
-            android:visibility="invisible"
+
+            android:visibility="gone"
             android:id="@+id/menu_6"
             android:layout_width="0dp"
             android:layout_height="match_parent"
